@@ -1,3 +1,8 @@
+2004-12-22  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.skip: Removed no longer existing files.
+	* POTFILES.in: Added missing files and sorted it.
+
 2004-12-22  Žygimantas Beručka  <uid0@akl.lt>
 
 	* lt.po: Updated Lithuanian translation.
